<resources>
    <string name="app_name">UnicodeVideoApp</string>
    <string name="registration_title_text">Sign Up</string>
    <string name="username_hint">Enter Username</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="register_btn_text">Register</string>
    <string name="login_btn_text">Login</string>
    <string name="login_title_text">Log In</string>
    <string name="registration_login_page_dir_text">Already have an account ?\nSwipe left to Log In</string>
    <string name="login_registration_page_dir_text">Don\'t have an account ?\nSwipe right to Register</string>
    <string name="reset_password_btn_text">Click to reset password</string>
    <string name="login_via_google_btn_text">Sign In Using Google</string>
    <string name="login_via_phone_btn_text">Sign In Using Phone</string>
    <string name="phoneauth_phone_num_hint">Enter Phone Number</string>
    <string name="phoneauth_verification_code_hint">Enter Verification Code</string>
    <string name="phoneauth_submit_btn_txt1">Login</string>
    <string name="phoneauth_submit_btn_txt2">Verify</string>
    <string name="search_bar_hint">Search video</string>
    <string name="logout_btn_txt">Logout</string>
    <string name="h_bnav_search_title">Search</string>
    <string name="h_bnav_video_title">Watch</string>
    <string name="h_bnav_profile_title">Profile</string>
    <string name="h_bnav_downloaded_vids_title">Downloads</string>
    <string name="h_bnav_fav_vids_title">Favourites</string>
    <string name="storage_perm_rat_title">External Storage Write Permission</string>
    <string name="storage_perm_rat_msg">The app requires permission to save downloaded video</string>
    <string name="accept_perm_btn_msg">Accept</string>
    <string name="username_label_text">Username :</string>
    <string name="userhandle_label_text">Handle :</string>
    <string name="userbdate_label_text">Birth Date :</string>
    <string name="user_country_label_text">Country :</string>
    <string name="save_profile_btn_text">Save</string>
    <string name="change_dp_btn_txt">Change Profile Pic</string>
    <string name="storage_read_perm_rat_title">External Storage Read Permission</string>
    <string name="storage_read_perm_rat_msg">The app requires permission to select image from gallery</string>
    <string name="downloaded_vids_perm_rat_msg">The app needs to access downloaded videos</string>
    <string name="download_video_btn_txt">Download Video</string>
    <string name="favourite_video_btn_txt">Mark Favourite</string>
</resources>